# atc-datahub

./: .gitignore  11.xlsx  README.md  aftn_db.sqlite  atc-aftn-web.service  backfill_tracks.py  config.json  config.lan.json  pyproject.toml  start_aftn.sh
aftn_web/: __init__.py  __main__.py  asr_receiver.py  config.py  database.py  fdr_store.py  handover.py  mcp_server.py  models.py  parser.py  radar_history.py  radar_receiver.py  receiver.py  terminal_area.py  voice_receiver.py  webapp.py  wx_cloud.py  xlsx_writer.py
aftn_web/templates/: index.html
config/: FDRG.json  SectorInfo.txt  TransPt.txt  TransPtKeyFix.txt  TransPt_inbound.txt  TransPt_outbound.txt  terminal_airports.txt
map/: BACKGROUND.txt  BORDER.txt  China.txt  MC_A_16.txt  MC_D_34LKC.txt  MSAW.txt  NAV_FIX.txt  OBST.txt  ROUTE1_11.txt  ROUTE2_11.txt  ROUTES.txt  SD_A_23.txt  SZ_A_15.txt  SZ_A_16L.txt  SZ_A_16R.txt  SZ_A_33.txt  SZ_A_34L.txt  SZ_A_34R.txt  SZ_D_NORTH.txt  SZ_D_SOUTH.txt  maplist.txt  route1.txt  route2.txt
scripts/: backfill_handover.py  backfill_sector_callsigns.sh  backfill_terminal_time.py  check_aftn_web.sh  migrate_hq.py  migrate_metar.py
