[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atc-aftn-web"
version = "0.1.0"
description = "ATC AFTN WebHub — AFTN 报文 UDP 接收、解析、存储和 WEB 查询"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0",
]

[project.scripts]
atc-aftn-web = "aftn_web.__main__:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["aftn_web*"]
